--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-A project containing purely static "root" files, and that should be used as well to output build results from other (client) projects.
+A project containing purely static "root" files, and that may be used as well to output build results from other (client) projects, alongside with pristine third-party dependencies.
